load("//build/bazel:qt.bzl", "qt_ui_library", "qt_cc_library", "qt_moc_header")

proto_library(
    name = "beats_proto",
    srcs = ["proto/beats.proto"],
)

cc_proto_library(
    name = "beats_cc_proto",
    deps = [":beats_proto"]
)

proto_library(
    name = "headers_proto",
    srcs = ["proto/headers.proto"],
)

cc_proto_library(
    name = "headers_cc_proto",
    deps = [":headers_proto"]
)

proto_library(
    name = "keys_proto",
    srcs = ["proto/keys.proto"],
)

cc_proto_library(
    name = "keys_cc_proto",
    deps = [":keys_proto"]
)

proto_library(
    name = "skin_proto",
    srcs = ["proto/skin.proto"],
)

cc_proto_library(
    name = "skin_cc_proto",
    deps = [":skin_proto"]
)

proto_library(
    name = "waveform_proto",
    srcs = ["proto/waveform.proto"],
)

cc_proto_library(
    name = "waveform_cc_proto",
    deps = [":waveform_proto"]
)

cc_library(
    name = "fpclassify",
    hdrs = ["util/fpclassify.h"],
    srcs = ["util/fpclassify.cpp"],
    nocopts = "-fast-math",
)

UI_FILES = [
    'controllers/dlgcontrollerlearning.ui',
    'controllers/dlgprefcontrollerdlg.ui',
    'controllers/dlgprefcontrollersdlg.ui',
    'dialog/dlgaboutdlg.ui',
    'dialog/dlgdevelopertoolsdlg.ui',
    'library/autodj/dlgautodj.ui',
    'library/dlganalysis.ui',
    'library/dlgcoverartfullsize.ui',
    'library/dlghidden.ui',
    'library/dlgmissing.ui',
    'library/dlgtagfetcher.ui',
    'library/dlgtrackinfo.ui',
    'library/export/dlgtrackexport.ui',
    'library/recording/dlgrecording.ui',
    'preferences/dialog/dlgprefautodjdlg.ui',
    'preferences/dialog/dlgprefbeatsdlg.ui',
    'preferences/dialog/dlgprefdeckdlg.ui',
    'preferences/dialog/dlgprefcrossfaderdlg.ui',
    'preferences/dialog/dlgpreflv2dlg.ui',
    'preferences/dialog/dlgprefeffectsdlg.ui',
    'preferences/dialog/dlgprefeqdlg.ui',
    'preferences/dialog/dlgpreferencesdlg.ui',
    'preferences/dialog/dlgprefinterfacedlg.ui',
    'preferences/dialog/dlgprefkeydlg.ui',
    'preferences/dialog/dlgpreflibrarydlg.ui',
    'preferences/dialog/dlgprefnovinyldlg.ui',
    'preferences/dialog/dlgprefrecorddlg.ui',
    'preferences/dialog/dlgprefreplaygaindlg.ui',
    'preferences/dialog/dlgprefsounddlg.ui',
    'preferences/dialog/dlgprefsounditem.ui',
    'preferences/dialog/dlgprefvinyldlg.ui',
    'preferences/dialog/dlgprefwaveformdlg.ui',
]

MIXXX_LIB_HDRS = [
    "analyzer/analyzer.h",
    "analyzer/analyzerbeats.h",
    "analyzer/analyzerebur128.h",
    "analyzer/analyzergain.h",
    "analyzer/analyzerkey.h",
    "analyzer/analyzerqueue.h",
    "analyzer/analyzerwaveform.h",
    "analyzer/vamp/vampanalyzer.h",
    "analyzer/vamp/vamppluginadapter.h",
    "android/notificationclient.h",
    "api/mixxxapi.h",
    #"broadcast/broadcastmanager.h",
    "broadcast/defs_broadcast.h",
    "build.h",  # TOOD(rryan): genrule
    "control/control.h",
    "control/controlaudiotaperpot.h",
    "control/controlbehavior.h",
    "control/controleffectknob.h",
    "control/controlencoder.h",
    "control/controlindicator.h",
    "control/controllinpotmeter.h",
    "control/controllogpotmeter.h",
    "control/controlmodel.h",
    "control/controlobject.h",
    "control/controlobjectscript.h",
    "control/controlpotmeter.h",
    "control/controlproxy.h",
    "control/controlpushbutton.h",
    "control/controlttrotary.h",
    "control/controlvalue.h",
    "controllers/bulk/bulkcontroller.h",
    "controllers/bulk/bulkenumerator.h",
    "controllers/bulk/bulksupported.h",
    "controllers/controller.h",
    "controllers/controllerdebug.h",
    "controllers/controllerengine.h",
    "controllers/controllerenumerator.h",
    "controllers/controllerinputmappingtablemodel.h",
    "controllers/controllerlearningeventfilter.h",
    "controllers/controllermanager.h",
    "controllers/controllermappingtablemodel.h",
    "controllers/controlleroutputmappingtablemodel.h",
    "controllers/controllerpreset.h",
    "controllers/controllerpresetfilehandler.h",
    "controllers/controllerpresetinfo.h",
    "controllers/controllerpresetinfoenumerator.h",
    "controllers/controllerpresetvisitor.h",
    "controllers/controllervisitor.h",
    "controllers/controlpickermenu.h",
    "controllers/defs_controllers.h",
    "controllers/delegates/controldelegate.h",
    "controllers/delegates/midibytedelegate.h",
    "controllers/delegates/midichanneldelegate.h",
    "controllers/delegates/midiopcodedelegate.h",
    "controllers/delegates/midioptionsdelegate.h",
    "controllers/dlgcontrollerlearning.h",
    "controllers/dlgprefcontroller.h",
    "controllers/dlgprefcontrollers.h",
    "controllers/hid/hidblacklist.h",
    "controllers/hid/hidcontroller.h",
    "controllers/hid/hidcontrollerpreset.h",
    "controllers/hid/hidcontrollerpresetfilehandler.h",
    "controllers/hid/hidenumerator.h",
    "controllers/keyboard/keyboardeventfilter.h",
    "controllers/learningutils.h",
    "controllers/midi/hss1394controller.h",
    "controllers/midi/hss1394enumerator.h",
    "controllers/midi/midicontroller.h",
    "controllers/midi/midicontrollerpreset.h",
    "controllers/midi/midicontrollerpresetfilehandler.h",
    "controllers/midi/midienumerator.h",
    "controllers/midi/midimessage.h",
    "controllers/midi/midioutputhandler.h",
    "controllers/midi/midiutils.h",
    "controllers/midi/portmidicontroller.h",
    "controllers/midi/portmididevice.h",
    "controllers/midi/portmidienumerator.h",
    "controllers/softtakeover.h",
    "database/mixxxdb.h",
    "database/schemamanager.h",
    "defs_urls.h",
    "defs_version.h",
    "dialog/dlgabout.h",
    "dialog/dlgdevelopertools.h",
    "effects/builtin/autopaneffect.h",
    "effects/builtin/balanceeffect.h",
    "effects/builtin/bessel4lvmixeqeffect.h",
    "effects/builtin/bessel8lvmixeqeffect.h",
    "effects/builtin/biquadfullkilleqeffect.h",
    "effects/builtin/bitcrushereffect.h",
    "effects/builtin/builtinbackend.h",
    "effects/builtin/echoeffect.h",
    "effects/builtin/equalizer_util.h",
    "effects/builtin/filtereffect.h",
    "effects/builtin/flangereffect.h",
    "effects/builtin/graphiceqeffect.h",
    "effects/builtin/linkwitzriley8eqeffect.h",
    "effects/builtin/loudnesscontoureffect.h",
    "effects/builtin/lvmixeqbase.h",
    "effects/builtin/metronomeclick.h",
    "effects/builtin/metronomeeffect.h",
    "effects/builtin/moogladder4filtereffect.h",
    "effects/builtin/parametriceqeffect.h",
    "effects/builtin/phasereffect.h",
    "effects/builtin/reverbeffect.h",
    "effects/builtin/threebandbiquadeqeffect.h",
    "effects/builtin/tremoloeffect.h",
    "effects/defs.h",
    "effects/effect.h",
    "effects/effectbuttonparameterslot.h",
    "effects/effectchain.h",
    "effects/effectchainmanager.h",
    "effects/effectchainslot.h",
    "effects/effectinstantiator.h",
    "effects/effectmanifest.h",
    "effects/effectmanifestparameter.h",
    "effects/effectparameter.h",
    "effects/effectparameterslot.h",
    "effects/effectparameterslotbase.h",
    "effects/effectprocessor.h",
    "effects/effectrack.h",
    "effects/effectsbackend.h",
    "effects/effectslot.h",
    "effects/effectsmanager.h",
    "effects/effectxmlelements.h",
    "effects/lv2/lv2backend.h",
    "effects/lv2/lv2effectprocessor.h",
    "effects/lv2/lv2manifest.h",
    "encoder/encoder.h",
    "encoder/encoderbroadcastsettings.h",
    "encoder/encodercallback.h",
    "encoder/encoderffmpegcore.h",
    "encoder/encoderffmpegmp3.h",
    "encoder/encoderffmpegresample.h",
    "encoder/encoderffmpegvorbis.h",
    "encoder/encoderflacsettings.h",
    "encoder/encodermp3.h",
    "encoder/encodermp3settings.h",
    "encoder/encodersettings.h",
    "encoder/encodersndfileflac.h",
    "encoder/encodervorbis.h",
    "encoder/encodervorbissettings.h",
    "encoder/encoderwave.h",
    "encoder/encoderwavesettings.h",
    "engine/bpmcontrol.h",
    "engine/cachingreader.h",
    "engine/cachingreaderchunk.h",
    "engine/cachingreaderworker.h",
    "engine/channelhandle.h",
    "engine/channelmixer.h",
    "engine/clockcontrol.h",
    "engine/cuecontrol.h",
    "engine/effects/engineeffect.h",
    "engine/effects/engineeffectchain.h",
    "engine/effects/engineeffectparameter.h",
    "engine/effects/engineeffectrack.h",
    "engine/effects/engineeffectsmanager.h",
    "engine/effects/groupfeaturestate.h",
    "engine/effects/message.h",
    "engine/engine.h",
    "engine/engineaux.h",
    "engine/enginebuffer.h",
    "engine/enginebufferscale.h",
    "engine/enginebufferscalelinear.h",
    "engine/enginebufferscalerubberband.h",
    "engine/enginebufferscalest.h",
    "engine/enginechannel.h",
    "engine/enginecontrol.h",
    "engine/enginedeck.h",
    "engine/enginedelay.h",
    "engine/enginefilter.h",
    "engine/enginefilterbessel4.h",
    "engine/enginefilterbessel8.h",
    "engine/enginefilterbiquad1.h",
    "engine/enginefilterbutterworth4.h",
    "engine/enginefilterbutterworth8.h",
    "engine/enginefilterdelay.h",
    "engine/enginefilteriir.h",
    "engine/enginefilterlinkwitzriley2.h",
    "engine/enginefilterlinkwitzriley4.h",
    "engine/enginefilterlinkwitzriley8.h",
    "engine/enginefiltermoogladder4.h",
    "engine/enginefilterpan.h",
    "engine/enginefilterpansingle.h",
    "engine/enginemaster.h",
    "engine/enginemicrophone.h",
    "engine/engineobject.h",
    "engine/enginepregain.h",
    "engine/enginesidechaincompressor.h",
    "engine/enginetalkoverducking.h",
    "engine/enginevumeter.h",
    "engine/engineworker.h",
    "engine/engineworkerscheduler.h",
    "engine/enginexfader.h",
    "engine/keycontrol.h",
    "engine/loopingcontrol.h",
    "engine/positionscratchcontroller.h",
    "engine/quantizecontrol.h",
    "engine/ratecontrol.h",
    "engine/readaheadmanager.h",
    "engine/sidechain/enginenetworkstream.h",
    "engine/sidechain/enginerecord.h",
    "engine/sidechain/enginesidechain.h",
    "engine/sidechain/networkinputstreamworker.h",
    "engine/sidechain/networkoutputstreamworker.h",
    #"engine/sidechain/shoutconnection.h",
    "engine/sidechain/sidechainworker.h",
    "engine/sync/basesyncablelistener.h",
    "engine/sync/clock.h",
    "engine/sync/enginesync.h",
    "engine/sync/internalclock.h",
    "engine/sync/syncable.h",
    "engine/sync/synccontrol.h",
    "engine/vinylcontrolcontrol.h",
    "errordialoghandler.h",
    "library/analysisfeature.h",
    "library/analysislibrarytablemodel.h",
    "library/autodj/autodjfeature.h",
    "library/autodj/autodjprocessor.h",
    "library/autodj/dlgautodj.h",
    "library/banshee/bansheedbconnection.h",
    "library/banshee/bansheefeature.h",
    "library/banshee/bansheeplaylistmodel.h",
    "library/baseexternallibraryfeature.h",
    "library/baseexternalplaylistmodel.h",
    "library/baseexternaltrackmodel.h",
    "library/baseplaylistfeature.h",
    "library/basesqltablemodel.h",
    "library/basetrackcache.h",
    "library/bpmdelegate.h",
    "library/browse/browsefeature.h",
    "library/browse/browsetablemodel.h",
    "library/browse/browsethread.h",
    "library/browse/foldertreemodel.h",
    "library/columncache.h",
    "library/coverart.h",
    "library/coverartcache.h",
    "library/coverartdelegate.h",
    "library/coverartutils.h",
    "library/crate/crate.h",
    "library/crate/cratefeature.h",
    "library/crate/cratefeaturehelper.h",
    "library/crate/crateid.h",
    "library/crate/crateschema.h",
    "library/crate/cratestorage.h",
    "library/crate/cratesummary.h",
    "library/crate/cratetablemodel.h",
    "library/dao/analysisdao.h",
    "library/dao/autodjcratesdao.h",
    "library/dao/cue.h",
    "library/dao/cuedao.h",
    "library/dao/dao.h",
    "library/dao/directorydao.h",
    "library/dao/libraryhashdao.h",
    "library/dao/playlistdao.h",
    "library/dao/settingsdao.h",
    "library/dao/trackdao.h",
    "library/dao/trackschema.h",
    "library/dlganalysis.h",
    "library/dlgcoverartfullsize.h",
    "library/dlghidden.h",
    "library/dlgmissing.h",
    "library/dlgtagfetcher.h",
    "library/dlgtrackinfo.h",
    "library/dlgtrackmetadataexport.h",
    "library/export/trackexportdlg.h",
    "library/export/trackexportwizard.h",
    "library/export/trackexportworker.h",
    "library/hiddentablemodel.h",
    "library/itunes/itunesfeature.h",
    "library/library.h",
    "library/library_preferences.h",
    "library/librarycontrol.h",
    "library/libraryfeature.h",
    "library/librarytablemodel.h",
    "library/libraryview.h",
    "library/missingtablemodel.h",
    "library/mixxxlibraryfeature.h",
    "library/parser.h",
    "library/parsercsv.h",
    "library/parserm3u.h",
    "library/parserpls.h",
    "library/playlistfeature.h",
    "library/playlisttablemodel.h",
    "library/previewbuttondelegate.h",
    "library/proxytrackmodel.h",
    "library/queryutil.h",
    "library/recording/dlgrecording.h",
    "library/recording/recordingfeature.h",
    "library/rhythmbox/rhythmboxfeature.h",
    "library/scanner/importfilestask.h",
    "library/scanner/libraryscanner.h",
    "library/scanner/libraryscannerdlg.h",
    "library/scanner/recursivescandirectorytask.h",
    "library/scanner/scannerglobal.h",
    "library/scanner/scannertask.h",
    "library/scanner/scannerutil.h",
    "library/searchquery.h",
    "library/searchqueryparser.h",
    "library/setlogfeature.h",
    "library/sidebarmodel.h",
    "library/songdownloader.h",
    "library/stardelegate.h",
    "library/stareditor.h",
    "library/starrating.h",
    "library/tableitemdelegate.h",
    "library/trackcollection.h",
    "library/trackmodel.h",
    "library/traktor/traktorfeature.h",
    "library/treeitem.h",
    "library/treeitemmodel.h",
    "mixer/auxiliary.h",
    "mixer/baseplayer.h",
    "mixer/basetrackplayer.h",
    "mixer/deck.h",
    "mixer/microphone.h",
    "mixer/playerinfo.h",
    "mixer/playermanager.h",
    "mixer/previewdeck.h",
    "mixer/sampler.h",
    "mixer/samplerbank.h",
    "mixxx.h",
    "mixxxapplication.h",
    "musicbrainz/acoustidclient.h",
    "musicbrainz/chromaprinter.h",
    "musicbrainz/crc.h",
    "musicbrainz/gzip.h",
    "musicbrainz/musicbrainzclient.h",
    "musicbrainz/network.h",
    "musicbrainz/tagfetcher.h",
    "preferences/broadcastprofile.h",
    "preferences/broadcastsettings.h",
    "preferences/broadcastsettingsmodel.h",
    "preferences/configobject.h",
    "preferences/constants.h",
    "preferences/dialog/dlgprefautodj.h",
    "preferences/dialog/dlgprefbeats.h",
    #"preferences/dialog/dlgprefbroadcast.h",
    "preferences/dialog/dlgprefcrossfader.h",
    "preferences/dialog/dlgprefdeck.h",
    "preferences/dialog/dlgprefeffects.h",
    "preferences/dialog/dlgprefeq.h",
    "preferences/dialog/dlgpreferences.h",
    "preferences/dialog/dlgprefinterface.h",
    "preferences/dialog/dlgprefkey.h",
    "preferences/dialog/dlgpreflibrary.h",
    "preferences/dialog/dlgpreflv2.h",
    "preferences/dialog/dlgprefmodplug.h",
    "preferences/dialog/dlgprefnovinyl.h",
    "preferences/dialog/dlgprefrecord.h",
    "preferences/dialog/dlgprefreplaygain.h",
    "preferences/dialog/dlgprefsound.h",
    "preferences/dialog/dlgprefsounditem.h",
    "preferences/dialog/dlgprefvinyl.h",
    "preferences/dialog/dlgprefwaveform.h",
    "preferences/dlgpreferencepage.h",
    "preferences/effectsettingsmodel.h",
    "preferences/replaygainsettings.h",
    "preferences/settingsmanager.h",
    "preferences/upgrade.h",
    "preferences/usersettings.h",
    "preferences/waveformsettings.h",
    "recording/defs_recording.h",
    "recording/recordingmanager.h",
    "skin/colorschemeparser.h",
    "skin/imgcolor.h",
    "skin/imginvert.h",
    "skin/imgloader.h",
    "skin/imgsource.h",
    "skin/launchimage.h",
    "skin/legacyskinparser.h",
    "skin/pixmapsource.h",
    "skin/skincontext.h",
    "skin/skinloader.h",
    "skin/skinparser.h",
    "skin/svgparser.h",
    "skin/tooltips.h",
    "soundio/sounddevice.h",
    "soundio/sounddeviceerror.h",
    "soundio/sounddevicenetwork.h",
    "soundio/sounddevicenotfound.h",
    "soundio/sounddeviceportaudio.h",
    "soundio/soundmanager.h",
    "soundio/soundmanagerconfig.h",
    "soundio/soundmanagerutil.h",
    "sources/audiosource.h",
    "sources/audiosourcestereoproxy.h",
    "sources/audiosourcetrackproxy.h",
    "sources/metadatasource.h",
    "sources/metadatasourcetaglib.h",
    "sources/mp3decoding.h",
    "sources/soundsource.h",
    "sources/soundsourcecoreaudio.h",
    "sources/soundsourceflac.h",
    "sources/soundsourcemodplug.h",
    "sources/soundsourcemp3.h",
    "sources/soundsourceoggvorbis.h",
    "sources/soundsourceopus.h",
    "sources/soundsourceplugin.h",
    "sources/soundsourcepluginapi.h",
    "sources/soundsourcepluginlibrary.h",
    "sources/soundsourceprovider.h",
    "sources/soundsourceproviderregistry.h",
    "sources/soundsourceproxy.h",
    "sources/soundsourcesndfile.h",
    "sources/urlresource.h",
    "sources/v1/legacyaudiosource.h",
    "sources/v1/legacyaudiosourceadapter.h",
    "track/albuminfo.h",
    "track/beat_preferences.h",
    "track/beatfactory.h",
    "track/beatgrid.h",
    "track/beatmap.h",
    "track/beats.h",
    "track/beatutils.h",
    "track/bpm.h",
    "track/globaltrackcache.h",
    "track/key_preferences.h",
    "track/keyfactory.h",
    "track/keys.h",
    "track/keyutils.h",
    "track/playcounter.h",
    "track/replaygain.h",
    "track/track.h",
    "track/trackid.h",
    "track/trackinfo.h",
    "track/trackmetadata.h",
    "track/trackmetadatataglib.h",
    "track/tracknumbers.h",
    "track/trackrecord.h",
    "track/trackref.h",
    "util/alphabetafilter.h",
    "util/assert.h",
    "util/audiosignal.h",
    "util/autohidpi.h",
    "util/battery/battery.h",
    "util/battery/batterylinux.h",
    "util/battery/batterymac.h",
    "util/battery/batterywindows.h",
    "util/circularbuffer.h",
    "util/class.h",
    "util/cmdlineargs.h",
    "util/compatibility.h",
    "util/console.h",
    "util/counter.h",
    "util/db/dbconnection.h",
    "util/db/dbconnectionpool.h",
    "util/db/dbconnectionpooled.h",
    "util/db/dbconnectionpooler.h",
    "util/db/dbentity.h",
    "util/db/dbfieldindex.h",
    "util/db/dbid.h",
    "util/db/dbnamedentity.h",
    "util/db/fwdsqlquery.h",
    "util/db/fwdsqlqueryselectresult.h",
    "util/db/sqllikewildcardescaper.h",
    "util/db/sqllikewildcards.h",
    "util/db/sqlqueryfinisher.h",
    "util/db/sqlstorage.h",
    "util/db/sqlstringformatter.h",
    "util/db/sqlsubselectmode.h",
    "util/db/sqltransaction.h",
    "util/debug.h",
    "util/defs.h",
    "util/denormalsarezero.h",
    "util/dnd.h",
    "util/duration.h",
    "util/event.h",
    "util/experiment.h",
    "util/fifo.h",
    "util/file.h",
    "util/font.h",
    "util/fpclassify.h",
    "util/indexrange.h",
    "util/lcs.h",
    "util/logger.h",
    "util/logging.h",
    "util/mac.h",
    "util/macros.h",
    "util/manager.h",
    "util/math.h",
    "util/memory.h",
    "util/movinginterquartilemean.h",
    "util/mutex.h",
    "util/parented_ptr.h",
    "util/path.h",
    "util/performancetimer.h",
    "util/platform.h",
    "util/rampingvalue.h",
    "util/readaheadsamplebuffer.h",
    "util/reference.h",
    "util/regex.h",
    "util/rescaler.h",
    "util/rlimit.h",
    "util/rotary.h",
    "util/sample.h",
    "util/sample_autogen.h",
    "util/samplebuffer.h",
    "util/sandbox.h",
    "util/scopedoverridecursor.h",
    "util/screensaver.h",
    "util/singleton.h",
    "util/sleep.h",
    "util/sleepableqthread.h",
    "util/stat.h",
    "util/statmodel.h",
    "util/statsmanager.h",
    "util/status.h",
    "util/string.h",
    "util/synthesizedmouseevents.h",
    "util/tapfilter.h",
    "util/task.h",
    "util/thread_annotations.h",
    "util/threadcputimer.h",
    "util/time.h",
    "util/timer.h",
    "util/trace.h",
    "util/translations.h",
    "util/types.h",
    "util/valuetransformer.h",
    "util/version.h",
    "util/widgethider.h",
    "util/xml.h",
    "vinylcontrol/defs_vinylcontrol.h",
    "vinylcontrol/steadypitch.h",
    "vinylcontrol/vinylcontrol.h",
    "vinylcontrol/vinylcontrolmanager.h",
    "vinylcontrol/vinylcontrolprocessor.h",
    "vinylcontrol/vinylcontrolsignalwidget.h",
    "vinylcontrol/vinylcontrolxwax.h",
    "vinylcontrol/vinylsignalquality.h",
    "waveform/guitick.h",
    "waveform/renderers/glslwaveformrenderersignal.h",
    "waveform/renderers/glvsynctestrenderer.h",
    "waveform/renderers/glwaveformrendererfilteredsignal.h",
    "waveform/renderers/glwaveformrendererrgb.h",
    "waveform/renderers/glwaveformrenderersimplesignal.h",
    "waveform/renderers/qtwaveformrendererfilteredsignal.h",
    "waveform/renderers/qtwaveformrenderersimplesignal.h",
    "waveform/renderers/waveformmark.h",
    "waveform/renderers/waveformmarkproperties.h",
    "waveform/renderers/waveformmarkrange.h",
    "waveform/renderers/waveformmarkset.h",
    "waveform/renderers/waveformrenderbackground.h",
    "waveform/renderers/waveformrenderbeat.h",
    "waveform/renderers/waveformrendererabstract.h",
    "waveform/renderers/waveformrendererendoftrack.h",
    "waveform/renderers/waveformrendererfilteredsignal.h",
    "waveform/renderers/waveformrendererhsv.h",
    "waveform/renderers/waveformrendererpreroll.h",
    "waveform/renderers/waveformrendererrgb.h",
    "waveform/renderers/waveformrenderersignalbase.h",
    "waveform/renderers/waveformrendermark.h",
    "waveform/renderers/waveformrendermarkrange.h",
    "waveform/renderers/waveformsignalcolors.h",
    "waveform/renderers/waveformwidgetrenderer.h",
    "waveform/sharedglcontext.h",
    "waveform/visualplayposition.h",
    "waveform/vsyncthread.h",
    "waveform/waveform.h",
    "waveform/waveformfactory.h",
    "waveform/waveformwidgetfactory.h",
    "waveform/widgets/emptywaveformwidget.h",
    "waveform/widgets/glrgbwaveformwidget.h",
    "waveform/widgets/glsimplewaveformwidget.h",
    "waveform/widgets/glslwaveformwidget.h",
    "waveform/widgets/glvsynctestwidget.h",
    "waveform/widgets/glwaveformwidget.h",
    "waveform/widgets/hsvwaveformwidget.h",
    "waveform/widgets/qtsimplewaveformwidget.h",
    "waveform/widgets/qtwaveformwidget.h",
    "waveform/widgets/rgbwaveformwidget.h",
    "waveform/widgets/softwarewaveformwidget.h",
    "waveform/widgets/waveformwidgetabstract.h",
    "waveform/widgets/waveformwidgettype.h",
    "widget/controlwidgetconnection.h",
    "widget/effectwidgetutils.h",
    "widget/hexspinbox.h",
    "widget/knobeventhandler.h",
    "widget/paintable.h",
    "widget/slidereventhandler.h",
    "widget/wanalysislibrarytableview.h",
    "widget/wbasewidget.h",
    "widget/wbattery.h",
    "widget/wbeatspinbox.h",
    "widget/wcombobox.h",
    "widget/wcoverart.h",
    "widget/wcoverartlabel.h",
    "widget/wcoverartmenu.h",
    "widget/wdisplay.h",
    "widget/weffect.h",
    "widget/weffectbuttonparameter.h",
    "widget/weffectchain.h",
    "widget/weffectparameter.h",
    "widget/weffectparameterbase.h",
    "widget/weffectparameterknob.h",
    "widget/weffectparameterknobcomposed.h",
    "widget/weffectpushbutton.h",
    "widget/weffectselector.h",
    "widget/wimagestore.h",
    "widget/wkey.h",
    "widget/wknob.h",
    "widget/wknobcomposed.h",
    "widget/wlabel.h",
    "widget/wlibrary.h",
    "widget/wlibrarysidebar.h",
    "widget/wlibrarytableview.h",
    "widget/wlibrarytextbrowser.h",
    "widget/wmainmenubar.h",
    "widget/wnumber.h",
    "widget/wnumberdb.h",
    "widget/wnumberpos.h",
    "widget/wnumberrate.h",
    "widget/woverview.h",
    "widget/woverviewhsv.h",
    "widget/woverviewlmh.h",
    "widget/woverviewrgb.h",
    "widget/wpixmapstore.h",
    "widget/wpushbutton.h",
    "widget/wquickwidget.h",
    "widget/wrecordingduration.h",
    "widget/wsearchlineedit.h",
    "widget/wsingletoncontainer.h",
    "widget/wsizeawarestack.h",
    "widget/wskincolor.h",
    "widget/wslidercomposed.h",
    "widget/wspinny.h",
    "widget/wsplitter.h",
    "widget/wstarrating.h",
    "widget/wstatuslight.h",
    "widget/wtime.h",
    "widget/wtrackproperty.h",
    "widget/wtracktableview.h",
    "widget/wtracktableviewheader.h",
    "widget/wtracktext.h",
    "widget/wvumeter.h",
    "widget/wwaveformviewer.h",
    "widget/wwidget.h",
    "widget/wwidgetgroup.h",
    "widget/wwidgetstack.h",
]

MIXXX_LIB_SRCS = [
    "analyzer/analyzerebur128.cpp",
    "analyzer/analyzergain.cpp",
    "analyzer/analyzerqueue.cpp",
    "analyzer/analyzerwaveform.cpp",
    "control/control.cpp",
    "control/controlaudiotaperpot.cpp",
    "control/controlbehavior.cpp",
    "control/controleffectknob.cpp",
    "control/controlencoder.cpp",
    "control/controlindicator.cpp",
    "control/controllinpotmeter.cpp",
    "control/controllogpotmeter.cpp",
    "control/controlmodel.cpp",
    "control/controlobject.cpp",
    "control/controlobjectscript.cpp",
    "control/controlpotmeter.cpp",
    "control/controlproxy.cpp",
    "control/controlpushbutton.cpp",
    "control/controlttrotary.cpp",
    "controllers/controller.cpp",
    "controllers/controllerdebug.cpp",
    "controllers/controllerengine.cpp",
    "controllers/controllerenumerator.cpp",
    "controllers/controllerinputmappingtablemodel.cpp",
    "controllers/controllerlearningeventfilter.cpp",
    "controllers/controllermanager.cpp",
    "controllers/controllermappingtablemodel.cpp",
    "controllers/controlleroutputmappingtablemodel.cpp",
    "controllers/controllerpresetfilehandler.cpp",
    "controllers/controllerpresetinfo.cpp",
    "controllers/controllerpresetinfoenumerator.cpp",
    "controllers/controlpickermenu.cpp",
    "controllers/delegates/controldelegate.cpp",
    "controllers/delegates/midibytedelegate.cpp",
    "controllers/delegates/midichanneldelegate.cpp",
    "controllers/delegates/midiopcodedelegate.cpp",
    "controllers/delegates/midioptionsdelegate.cpp",
    "controllers/dlgcontrollerlearning.cpp",
    "controllers/dlgprefcontroller.cpp",
    "controllers/dlgprefcontrollers.cpp",
    "controllers/keyboard/keyboardeventfilter.cpp",
    "controllers/learningutils.cpp",
    "controllers/midi/midicontroller.cpp",
    "controllers/midi/midicontrollerpresetfilehandler.cpp",
    "controllers/midi/midienumerator.cpp",
    "controllers/midi/midimessage.cpp",
    "controllers/midi/midioutputhandler.cpp",
    "controllers/midi/midiutils.cpp",
    "controllers/midi/portmidicontroller.cpp",
    "controllers/midi/portmidienumerator.cpp",
    "controllers/softtakeover.cpp",
    "database/mixxxdb.cpp",
    "database/schemamanager.cpp",
    "dialog/dlgabout.cpp",
    "dialog/dlgdevelopertools.cpp",
    "effects/builtin/autopaneffect.cpp",
    "effects/builtin/balanceeffect.cpp",
    "effects/builtin/bessel4lvmixeqeffect.cpp",
    "effects/builtin/bessel8lvmixeqeffect.cpp",
    "effects/builtin/biquadfullkilleqeffect.cpp",
    "effects/builtin/bitcrushereffect.cpp",
    "effects/builtin/builtinbackend.cpp",
    "effects/builtin/echoeffect.cpp",
    "effects/builtin/filtereffect.cpp",
    "effects/builtin/flangereffect.cpp",
    "effects/builtin/graphiceqeffect.cpp",
    "effects/builtin/linkwitzriley8eqeffect.cpp",
    "effects/builtin/loudnesscontoureffect.cpp",
    "effects/builtin/metronomeeffect.cpp",
    "effects/builtin/moogladder4filtereffect.cpp",
    "effects/builtin/parametriceqeffect.cpp",
    "effects/builtin/phasereffect.cpp",
    "effects/builtin/reverbeffect.cpp",
    "effects/builtin/threebandbiquadeqeffect.cpp",
    "effects/builtin/tremoloeffect.cpp",
    "effects/effect.cpp",
    "effects/effectbuttonparameterslot.cpp",
    "effects/effectchain.cpp",
    "effects/effectchainmanager.cpp",
    "effects/effectchainslot.cpp",
    "effects/effectmanifest.cpp",
    "effects/effectmanifestparameter.cpp",
    "effects/effectparameter.cpp",
    "effects/effectparameterslot.cpp",
    "effects/effectparameterslotbase.cpp",
    "effects/effectrack.cpp",
    "effects/effectsbackend.cpp",
    "effects/effectslot.cpp",
    "effects/effectsmanager.cpp",
    "encoder/encoder.cpp",
    "encoder/encoderbroadcastsettings.cpp",
    "encoder/encoderflacsettings.cpp",
    "encoder/encodermp3.cpp",
    "encoder/encodermp3settings.cpp",
    "encoder/encodersndfileflac.cpp",
    "encoder/encodervorbis.cpp",
    "encoder/encodervorbissettings.cpp",
    "encoder/encoderwave.cpp",
    "encoder/encoderwavesettings.cpp",
    "engine/bpmcontrol.cpp",
    "engine/cachingreader.cpp",
    "engine/cachingreaderchunk.cpp",
    "engine/cachingreaderworker.cpp",
    "engine/channelmixer_autogen.cpp",
    "engine/clockcontrol.cpp",
    "engine/cuecontrol.cpp",
    "engine/effects/engineeffect.cpp",
    "engine/effects/engineeffectchain.cpp",
    "engine/effects/engineeffectrack.cpp",
    "engine/effects/engineeffectsmanager.cpp",
    "engine/engineaux.cpp",
    "engine/enginebuffer.cpp",
    "engine/enginebufferscale.cpp",
    "engine/enginebufferscalelinear.cpp",
    "engine/enginebufferscalerubberband.cpp",
    "engine/enginebufferscalest.cpp",
    "engine/enginechannel.cpp",
    "engine/enginecontrol.cpp",
    "engine/enginedeck.cpp",
    "engine/enginedelay.cpp",
    "engine/enginefilter.cpp",
    "engine/enginefilterbessel4.cpp",
    "engine/enginefilterbessel8.cpp",
    "engine/enginefilterbiquad1.cpp",
    "engine/enginefilterbutterworth4.cpp",
    "engine/enginefilterbutterworth8.cpp",
    "engine/enginefilterlinkwitzriley2.cpp",
    "engine/enginefilterlinkwitzriley4.cpp",
    "engine/enginefilterlinkwitzriley8.cpp",
    "engine/enginefiltermoogladder4.cpp",
    "engine/enginemaster.cpp",
    "engine/enginemicrophone.cpp",
    "engine/engineobject.cpp",
    "engine/enginepregain.cpp",
    "engine/enginesidechaincompressor.cpp",
    "engine/enginetalkoverducking.cpp",
    "engine/enginevumeter.cpp",
    "engine/engineworker.cpp",
    "engine/engineworkerscheduler.cpp",
    "engine/enginexfader.cpp",
    "engine/keycontrol.cpp",
    "engine/loopingcontrol.cpp",
    "engine/positionscratchcontroller.cpp",
    "engine/quantizecontrol.cpp",
    "engine/ratecontrol.cpp",
    "engine/readaheadmanager.cpp",
    "engine/sidechain/enginenetworkstream.cpp",
    "engine/sidechain/enginerecord.cpp",
    "engine/sidechain/enginesidechain.cpp",
    "engine/sidechain/networkinputstreamworker.cpp",
    "engine/sidechain/networkoutputstreamworker.cpp",
    "engine/sync/basesyncablelistener.cpp",
    "engine/sync/enginesync.cpp",
    "engine/sync/internalclock.cpp",
    "engine/sync/synccontrol.cpp",
    "errordialoghandler.cpp",
    "library/analysisfeature.cpp",
    "library/analysislibrarytablemodel.cpp",
    "library/autodj/autodjfeature.cpp",
    "library/autodj/autodjprocessor.cpp",
    "library/autodj/dlgautodj.cpp",
    "library/banshee/bansheedbconnection.cpp",
    "library/banshee/bansheefeature.cpp",
    "library/banshee/bansheeplaylistmodel.cpp",
    "library/baseexternallibraryfeature.cpp",
    "library/baseexternalplaylistmodel.cpp",
    "library/baseexternaltrackmodel.cpp",
    "library/baseplaylistfeature.cpp",
    "library/basesqltablemodel.cpp",
    "library/basetrackcache.cpp",
    "library/bpmdelegate.cpp",
    "library/browse/browsefeature.cpp",
    "library/browse/browsetablemodel.cpp",
    "library/browse/browsethread.cpp",
    "library/browse/foldertreemodel.cpp",
    "library/columncache.cpp",
    "library/coverart.cpp",
    "library/coverartcache.cpp",
    "library/coverartdelegate.cpp",
    "library/coverartutils.cpp",
    "library/crate/cratefeature.cpp",
    "library/crate/cratefeaturehelper.cpp",
    "library/crate/cratestorage.cpp",
    "library/crate/cratetablemodel.cpp",
    "library/dao/analysisdao.cpp",
    "library/dao/autodjcratesdao.cpp",
    "library/dao/cue.cpp",
    "library/dao/cuedao.cpp",
    "library/dao/directorydao.cpp",
    "library/dao/libraryhashdao.cpp",
    "library/dao/playlistdao.cpp",
    "library/dao/settingsdao.cpp",
    "library/dao/trackdao.cpp",
    "library/dlganalysis.cpp",
    "library/dlgcoverartfullsize.cpp",
    "library/dlghidden.cpp",
    "library/dlgmissing.cpp",
    "library/dlgtagfetcher.cpp",
    "library/dlgtrackinfo.cpp",
    "library/dlgtrackmetadataexport.cpp",
    "library/export/trackexportdlg.cpp",
    "library/export/trackexportwizard.cpp",
    "library/export/trackexportworker.cpp",
    "library/hiddentablemodel.cpp",
    "library/itunes/itunesfeature.cpp",
    "library/library.cpp",
    "library/librarycontrol.cpp",
    "library/libraryfeature.cpp",
    "library/librarytablemodel.cpp",
    "library/missingtablemodel.cpp",
    "library/mixxxlibraryfeature.cpp",
    "library/parser.cpp",
    "library/parsercsv.cpp",
    "library/parserm3u.cpp",
    "library/parserpls.cpp",
    "library/playlistfeature.cpp",
    "library/playlisttablemodel.cpp",
    "library/previewbuttondelegate.cpp",
    "library/proxytrackmodel.cpp",
    "library/recording/dlgrecording.cpp",
    "library/recording/recordingfeature.cpp",
    "library/rhythmbox/rhythmboxfeature.cpp",
    "library/scanner/importfilestask.cpp",
    "library/scanner/libraryscanner.cpp",
    "library/scanner/libraryscannerdlg.cpp",
    "library/scanner/recursivescandirectorytask.cpp",
    "library/scanner/scannertask.cpp",
    "library/searchquery.cpp",
    "library/searchqueryparser.cpp",
    "library/setlogfeature.cpp",
    "library/sidebarmodel.cpp",
    "library/songdownloader.cpp",
    "library/stardelegate.cpp",
    "library/stareditor.cpp",
    "library/starrating.cpp",
    "library/tableitemdelegate.cpp",
    "library/trackcollection.cpp",
    "library/traktor/traktorfeature.cpp",
    "library/treeitem.cpp",
    "library/treeitemmodel.cpp",
    "mixer/auxiliary.cpp",
    "mixer/baseplayer.cpp",
    "mixer/basetrackplayer.cpp",
    "mixer/deck.cpp",
    "mixer/microphone.cpp",
    "mixer/playerinfo.cpp",
    "mixer/playermanager.cpp",
    "mixer/previewdeck.cpp",
    "mixer/sampler.cpp",
    "mixer/samplerbank.cpp",
    "mixxx.cpp",
    "mixxxapplication.cpp",
    "musicbrainz/acoustidclient.cpp",
    "musicbrainz/chromaprinter.cpp",
    "musicbrainz/crc.c",
    "musicbrainz/gzip.cpp",
    "musicbrainz/musicbrainzclient.cpp",
    "musicbrainz/network.cpp",
    "musicbrainz/tagfetcher.cpp",
    "preferences/broadcastprofile.cpp",
    "preferences/broadcastsettings.cpp",
    "preferences/broadcastsettings_legacy.cpp",
    "preferences/broadcastsettingsmodel.cpp",
    "preferences/configobject.cpp",
    "preferences/dialog/dlgprefautodj.cpp",
    "preferences/dialog/dlgprefcrossfader.cpp",
    "preferences/dialog/dlgprefdeck.cpp",
    "preferences/dialog/dlgprefeffects.cpp",
    "preferences/dialog/dlgprefeq.cpp",
    "preferences/dialog/dlgpreferences.cpp",
    "preferences/dialog/dlgprefinterface.cpp",
    "preferences/dialog/dlgpreflibrary.cpp",
    "preferences/dialog/dlgprefnovinyl.cpp",
    "preferences/dialog/dlgprefrecord.cpp",
    "preferences/dialog/dlgprefreplaygain.cpp",
    "preferences/dialog/dlgprefsound.cpp",
    "preferences/dialog/dlgprefsounditem.cpp",
    "preferences/dialog/dlgprefwaveform.cpp",
    "preferences/dlgpreferencepage.cpp",
    "preferences/effectsettingsmodel.cpp",
    "preferences/replaygainsettings.cpp",
    "preferences/settingsmanager.cpp",
    "preferences/upgrade.cpp",
    "recording/recordingmanager.cpp",
    "skin/colorschemeparser.cpp",
    "skin/imgcolor.cpp",
    "skin/imginvert.cpp",
    "skin/imgloader.cpp",
    "skin/launchimage.cpp",
    "skin/legacyskinparser.cpp",
    "skin/pixmapsource.cpp",
    "skin/skincontext.cpp",
    "skin/skinloader.cpp",
    "skin/svgparser.cpp",
    "skin/tooltips.cpp",
    "soundio/sounddevice.cpp",
    "soundio/sounddevicenetwork.cpp",
    "soundio/sounddeviceportaudio.cpp",
    "soundio/soundmanager.cpp",
    "soundio/soundmanagerconfig.cpp",
    "soundio/soundmanagerutil.cpp",
    "sources/audiosource.cpp",
    "sources/audiosourcestereoproxy.cpp",
    "sources/metadatasourcetaglib.cpp",
    "sources/soundsource.cpp",
    "sources/soundsourceflac.cpp",
    "sources/soundsourceoggvorbis.cpp",
    #"sources/soundsourceopus.cpp",  # TODO(rryan): optional
    "sources/soundsourceplugin.cpp",
    "sources/soundsourcepluginlibrary.cpp",
    "sources/soundsourceproviderregistry.cpp",
    "sources/soundsourceproxy.cpp",
    "sources/soundsourcesndfile.cpp",
    "track/albuminfo.cpp",
    "track/beatfactory.cpp",
    "track/beatgrid.cpp",
    "track/beatmap.cpp",
    "track/beats.cpp",
    "track/beatutils.cpp",
    "track/bpm.cpp",
    "track/globaltrackcache.cpp",
    "track/keyfactory.cpp",
    "track/keys.cpp",
    "track/keyutils.cpp",
    "track/playcounter.cpp",
    "track/replaygain.cpp",
    "track/track.cpp",
    "track/trackinfo.cpp",
    "track/trackmetadata.cpp",
    "track/trackmetadatataglib.cpp",
    "track/tracknumbers.cpp",
    "track/trackrecord.cpp",
    "track/trackref.cpp",
    "util/audiosignal.cpp",
    "util/autohidpi.cpp",
    "util/battery/battery.cpp",
    "util/cmdlineargs.cpp",
    "util/console.cpp",
    "util/db/dbconnection.cpp",
    "util/db/dbconnectionpool.cpp",
    "util/db/dbconnectionpooled.cpp",
    "util/db/dbconnectionpooler.cpp",
    "util/db/dbid.cpp",
    "util/db/fwdsqlquery.cpp",
    "util/db/fwdsqlqueryselectresult.cpp",
    "util/db/sqllikewildcardescaper.cpp",
    "util/db/sqlqueryfinisher.cpp",
    "util/db/sqlstringformatter.cpp",
    "util/db/sqltransaction.cpp",
    "util/duration.cpp",
    "util/experiment.cpp",
    "util/file.cpp",
    "util/indexrange.cpp",
    "util/logger.cpp",
    "util/logging.cpp",
    "util/mac.cpp",
    "util/movinginterquartilemean.cpp",
    "util/performancetimer.cpp",
    "util/readaheadsamplebuffer.cpp",
    "util/rlimit.cpp",
    "util/rotary.cpp",
    "util/sample.cpp",
    "util/samplebuffer.cpp",
    "util/sandbox.cpp",
    "util/screensaver.cpp",
    "util/sleepableqthread.cpp",
    "util/stat.cpp",
    "util/statmodel.cpp",
    "util/statsmanager.cpp",
    "util/tapfilter.cpp",
    "util/task.cpp",
    "util/threadcputimer.cpp",
    "util/time.cpp",
    "util/timer.cpp",
    "util/valuetransformer.cpp",
    "util/version.cpp",
    "util/widgethider.cpp",
    "util/xml.cpp",
    "waveform/guitick.cpp",
    "waveform/renderers/glslwaveformrenderersignal.cpp",
    "waveform/renderers/glvsynctestrenderer.cpp",
    "waveform/renderers/glwaveformrendererfilteredsignal.cpp",
    "waveform/renderers/glwaveformrendererrgb.cpp",
    "waveform/renderers/glwaveformrenderersimplesignal.cpp",
    "waveform/renderers/qtwaveformrendererfilteredsignal.cpp",
    "waveform/renderers/qtwaveformrenderersimplesignal.cpp",
    "waveform/renderers/waveformmark.cpp",
    "waveform/renderers/waveformmarkproperties.cpp",
    "waveform/renderers/waveformmarkrange.cpp",
    "waveform/renderers/waveformmarkset.cpp",
    "waveform/renderers/waveformrenderbackground.cpp",
    "waveform/renderers/waveformrenderbeat.cpp",
    "waveform/renderers/waveformrendererabstract.cpp",
    "waveform/renderers/waveformrendererendoftrack.cpp",
    "waveform/renderers/waveformrendererfilteredsignal.cpp",
    "waveform/renderers/waveformrendererhsv.cpp",
    "waveform/renderers/waveformrendererpreroll.cpp",
    "waveform/renderers/waveformrendererrgb.cpp",
    "waveform/renderers/waveformrenderersignalbase.cpp",
    "waveform/renderers/waveformrendermark.cpp",
    "waveform/renderers/waveformrendermarkrange.cpp",
    "waveform/renderers/waveformsignalcolors.cpp",
    "waveform/renderers/waveformwidgetrenderer.cpp",
    "waveform/sharedglcontext.cpp",
    "waveform/visualplayposition.cpp",
    "waveform/vsyncthread.cpp",
    "waveform/waveform.cpp",
    "waveform/waveformfactory.cpp",
    "waveform/waveformwidgetfactory.cpp",
    "waveform/widgets/emptywaveformwidget.cpp",
    "waveform/widgets/glrgbwaveformwidget.cpp",
    "waveform/widgets/glsimplewaveformwidget.cpp",
    "waveform/widgets/glslwaveformwidget.cpp",
    "waveform/widgets/glvsynctestwidget.cpp",
    "waveform/widgets/glwaveformwidget.cpp",
    "waveform/widgets/hsvwaveformwidget.cpp",
    "waveform/widgets/qtsimplewaveformwidget.cpp",
    "waveform/widgets/qtwaveformwidget.cpp",
    "waveform/widgets/rgbwaveformwidget.cpp",
    "waveform/widgets/softwarewaveformwidget.cpp",
    "waveform/widgets/waveformwidgetabstract.cpp",
    "widget/controlwidgetconnection.cpp",
    "widget/hexspinbox.cpp",
    "widget/paintable.cpp",
    "widget/wanalysislibrarytableview.cpp",
    "widget/wbasewidget.cpp",
    "widget/wbattery.cpp",
    "widget/wbeatspinbox.cpp",
    "widget/wcombobox.cpp",
    "widget/wcoverart.cpp",
    "widget/wcoverartlabel.cpp",
    "widget/wcoverartmenu.cpp",
    "widget/wdisplay.cpp",
    "widget/weffect.cpp",
    "widget/weffectbuttonparameter.cpp",
    "widget/weffectchain.cpp",
    "widget/weffectparameter.cpp",
    "widget/weffectparameterbase.cpp",
    "widget/weffectparameterknob.cpp",
    "widget/weffectparameterknobcomposed.cpp",
    "widget/weffectpushbutton.cpp",
    "widget/weffectselector.cpp",
    "widget/wimagestore.cpp",
    "widget/wkey.cpp",
    "widget/wknob.cpp",
    "widget/wknobcomposed.cpp",
    "widget/wlabel.cpp",
    "widget/wlibrary.cpp",
    "widget/wlibrarysidebar.cpp",
    "widget/wlibrarytableview.cpp",
    "widget/wlibrarytextbrowser.cpp",
    "widget/wmainmenubar.cpp",
    "widget/wnumber.cpp",
    "widget/wnumberdb.cpp",
    "widget/wnumberpos.cpp",
    "widget/wnumberrate.cpp",
    "widget/woverview.cpp",
    "widget/woverviewhsv.cpp",
    "widget/woverviewlmh.cpp",
    "widget/woverviewrgb.cpp",
    "widget/wpixmapstore.cpp",
    "widget/wpushbutton.cpp",
    "widget/wrecordingduration.cpp",
    "widget/wsearchlineedit.cpp",
    "widget/wsingletoncontainer.cpp",
    "widget/wsizeawarestack.cpp",
    "widget/wskincolor.cpp",
    "widget/wslidercomposed.cpp",
    "widget/wspinny.cpp",
    "widget/wsplitter.cpp",
    "widget/wstarrating.cpp",
    "widget/wstatuslight.cpp",
    "widget/wtime.cpp",
    "widget/wtrackproperty.cpp",
    "widget/wtracktableview.cpp",
    "widget/wtracktableviewheader.cpp",
    "widget/wtracktext.cpp",
    "widget/wvumeter.cpp",
    "widget/wwaveformviewer.cpp",
    "widget/wwidget.cpp",
    "widget/wwidgetgroup.cpp",
    "widget/wwidgetstack.cpp",
]

[qt_ui_library(name = "ui_%s" % path.replace('/', '_'), ui = path, deps=[]) for path in UI_FILES]
UI_LIBRARIES = [":ui_%s" % path.replace('/', '_') for path in UI_FILES]

MOC_SRCS = [qt_moc_header(hdr) for hdr in MIXXX_LIB_HDRS]

cc_library(
    name = "mixxx_lib",
    hdrs = MIXXX_LIB_HDRS,
    srcs = MIXXX_LIB_SRCS + MOC_SRCS,
    # Every include is relative to src/.
    copts = [
        "-Isrc",
        "-fPIC",  # Required since Qt 5 is built with -reduce-relocations.
        "-Wno-inconsistent-missing-override",
        # Warn about implicit fallthrough.
        '-Wimplicit-fallthrough',
        # Enable thread-safety analysis.
        # http://clang.llvm.org/docs/ThreadSafetyAnalysis.html
        "-Wthread-safety",
        "-Wall",
        "-Wextra",
        "-g",  # TODO(rryan): debug only?

    ],
    includes = [
        ".",
    ],
    linkopts = [
        "-framework OpenGL",
        "-framework Security",
        "-framework CoreServices",
        "-framework IOKit",
    ],
    defines = [
        "__PORTAUDIO__",
        "__SNDFILE__",
        # TODO(rjryan): check for this:
        "SFC_SUPPORTS_SET_COMPRESSION_LEVEL",
        "QT_TABLET_SUPPORT",

        # TODO(XXX): Remove dependence on Qt 4 support.
        "QT_DISABLE_DEPRECATED_BEFORE",

        "MIXXX_BUILD_NUMBER_IN_TITLE_BAR",  # TODO(rryan): option
        "MIXXX_BUILD_RELEASE",  # TODO(rryan): debug/release mode option
        "NDEBUG",  # TODO(rryan): tie to release mode
        "'Q_ASSERT(x)=static_cast<void>(false&&(x))'",  # Disable Qt assertions.
        "MIXXX_DEBUG_ASSERTIONS_FATAL",  # TODO(rryan): option

        # TODO(rryan): __LINUX__, __BSD__, __UNIX__
        r'SETTINGS_PATH=\".mixxx\"',
        r'SETTINGS_FILE=\"mixxx.cfg\"',  # True on all platforms.
        r'UNIX_SHARE_PATH=\"TODO\"',
        r'UNIX_LIB_PATH=\"TODO\"',
    ],
    deps = UI_LIBRARIES + [
        ":beats_cc_proto",
        ":fpclassify",
        ":headers_cc_proto",
        ":keys_cc_proto",
        ":skin_cc_proto",
        ":waveform_cc_proto",
        "//res:mixxx_qrc",
        "//lib:ebur128",
        "//lib:fidlib",
        "//lib:hidapi",
        "//lib:gtest_prod",
        "//lib:pa_ringbuffer",
        "//lib:qtscript-bytearray",
        "//lib:replaygain",
        "//lib:reverb",
        "//lib:soundtouch",
        "@Qt5Concurrent//:lib",
        "@Qt5Core//:lib", # TODO(rjryan): Qt5DBus on Linux.
        "@Qt5Gui//:lib",
        "@Qt5Network//:lib",
        "@Qt5OpenGL//:lib",
        "@Qt5Script//:lib",
        "@Qt5ScriptTools//:lib",
        "@Qt5Sql//:lib",
        "@Qt5Svg//:lib",
        "@Qt5Widgets//:lib",
        "@Qt5Xml//:lib",
        "@flac//:lib",
        "@libchromaprint//:lib",
        "@libmodplug//:lib",
        "@lilv-0//:lib",
        "@mad//:lib",
        "@ogg//:lib",
        "@opus//:lib",
        "@opusfile//:lib",
        "@portaudio//:lib",
        "@portmidi//:lib",
        "@protobuf-lite//:lib",
        "@rubberband//:lib",
        "@sndfile//:lib",
        "@taglib//:lib",
        "@vorbis//:lib",
        "@vorbisenc//:lib",  # Don't use on Windows.
        "@vorbisfile//:lib",
    ],
)

cc_binary(
    name = "mixxx",
    srcs = ["main.cpp"],
    deps = ["//src:mixxx_lib"],
)

cc_test(
    name = "mixxx_test",
    srcs = glob(["test/*.cpp"]),
    deps = [
        "//src:mixxx_lib",
        "@Qt5Test//:lib",
    ]
)
